# pawccc

./: .gitignore  .prettierrc  Cargo.toml  Dockerfile  db-create-all.sql  db-drop-all.sql  eslint.config.js  flake.nix  package.json  svelte.config.js  vite.config.ts
patches/: @sveltejs%2Fkit@2.38.1.patch  @sveltejs%2Fkit@2.42.1.patch
src/: app.css  app.html  hooks.server.ts  main.rs
src/ddl/: 1.sql
src/lib/: auth.server.ts  auth.ts  send.server.ts
src/lib/components/: Form.svelte
src/lib/emails/: ChangePassword.svelte
src/lib/letters/: ChangePassword.svelte
src/lib/locales/: de.json  en.json  index.ts
src/routes/: +error.svelte  +layout.server.ts  +layout.svelte  +page.svelte
src/routes/(auth)/: +layout.svelte  Form.svelte
src/routes/(auth)/change-password/: +page.server.ts  +page.svelte
src/routes/(auth)/forgot-password/: +page.server.ts  +page.svelte
src/routes/(auth)/sign-in/: +page.server.ts  +page.svelte
src/routes/(auth)/sign-out/: +page.server.ts  +page.svelte  +server.ts
src/routes/(auth)/sign-up/: +page.server.ts  +page.svelte
src/routes/(user)/: +layout.server.ts  +layout.svelte  +page.server.ts  +page.svelte
src/routes/(user)/[entity]/: +page.svelte
src/routes/(user)/[entity]/chat/: +page.svelte
src/routes/(user)/[user]/: +page.server.ts  +page.svelte
src/routes/(user)/[user]/chat/: +page.server.ts  +page@.svelte
src/routes/chat/[chat]/: +page.server.ts  +page.svelte
src/routes/imprint/: +page.svelte
src/routes/privacy/: +page.svelte
static/: manifest.json
