[package]
name = "w00f"
version = "0.1.0"
edition = "2024"

[dependencies]
futures-util = "0.3"
hkdf = "0.12"
josekit = "0.10"
sha2 = "0.10"
sqlx = { version = "0.8", features = [ "runtime-tokio", "postgres", "time" ] }
tokio = { version = "1.47", features = [ "full" ] }
tokio-tungstenite = "0.27"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
time-macros = "0.2"
time = { version = "0.3", features = ["serde"] }
dashmap = "6.1"
